@@ -84,6 +84,7 @@ Shannon Hill               <hill@synnet.com>
 Sotiris Vassilopoulos      <Sotiris.Vassilopoulos@betatech.gr>
 Standish Parsley           <adsspamtrap01@yahoo.com>
 Stewart Levin              <stew@sep.stanford.edu>
+Strahinja Kustudic         <kustodian@gmail.com>
 Sven Joachim               <svenjoac@gmx.de>
 Sydoruk Stepan             <step@unitex.kiev.ua>
 Tapani Tarvainen           <tt@mit.jyu.fi>
